# ContextLedger

./: README.md  pyproject.toml
.github/workflows/: ci.yml  weekly-history.yml
docs/: getting-started.md  git-historian.md  workflows.md
docs/context/: historian_inventory.md
examples/history/: README.md
examples/history/context/: historian_inventory.json
scripts/: generate_history.py
src/contextledger/: cli.py
src/contextledger/github/: __init__.py  projects.py
