[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "contextledger"
version = "0.1.0"
description = "ContextLedger: lightweight weekly/on-demand project history snapshots."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{ name = "Shayne Vandersloot" }]
dependencies = [
    "requests",
    "PyYAML",
]

[project.optional-dependencies]
s3 = ["boto3"]

[project.urls]
Homepage = "https://github.com/dutchsloot84/ContextLedger"
Issues = "https://github.com/dutchsloot84/ContextLedger/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Defaults retained; customize rules here when needed.

[tool.ruff.lint.per-file-ignores]
"scripts/generate_history.py" = ["E402"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
